hard-gists/ca92b42f1f796763e5d1f8cd73247a30/run.log
=== Docker Run Log for ca92b42f1f796763e5d1f8cd73247a30 ===
Started at: Mi 29. Okt 20:11:36 CET 2025

[2025-10-29 20:11:36] START: Running container for ca92b42f1f796763e5d1f8cd73247a30
[2025-10-29 20:11:36] SUCCESS: Container ff409781abbe29359a34a39fe3609c462f819b1787b9d763dbc78235083c892d started for ca92b42f1f796763e5d1f8cd73247a30
=== Container logs for ca92b42f1f796763e5d1f8cd73247a30 ===
  File "/snippet.py", line 122
    except Exception,e:  
           ^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for ca92b42f1f796763e5d1f8cd73247a30 ===
[2025-10-29 20:11:38] INFO: Container ff409781abbe29359a34a39fe3609c462f819b1787b9d763dbc78235083c892d has stopped
